# Multi_Modal_and_Multi_Agent_Research_Assistant

./: .gitignore  README.md  docker-compose.yaml  langgraph.json  pyproject.toml
airflow/: .dockerignore  Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: AWS_utils.py  cfa_processing_dag.py  parser.py  scraper.py  vectorizer.py
backend/: Dockerfile  langgraph.json  run_agent.py  run_client.py  run_service.py
backend/agents/: __init__.py  agents.py  chatbot.py  models.py  multi_modal_rag.py  research_assistant.py
backend/agents/bg_task_agent/: bg_task_agent.py  task.py
backend/agents/tools/: rag_tools.py  research_tools.py  tools.py
backend/client/: client.py
backend/config/: settings.py
backend/controllers/: auth_controller.py
backend/models/: publication.py  user_model.py
backend/routes/: auth_routes.py
backend/scripts/: codelab.py
backend/service/: service.py  utils.py
backend/services/: auth_service.py  database_service.py  tools.py
frontend/: Dockerfile  app.py  codelab.py
frontend/.streamlit/: config.toml
frontend/app_pages/: home_page.py
frontend/client/: client.py
frontend/components/: navbar.py
frontend/data/: users.db
frontend/services/: authentication.py  session_store.py  utils.py
frontend/styles/: styles.css
output_markdown/: codelab_20241115_115840.md
poc/: codelabs.py  convert_requirements.py  gdoc.py  generate_codelabs.py  imagesrag.py  langrapgh-agent.ipynb  parsing.py  scraper.ipynb  scraper.py  vectorisation.py
research_outputs/: research_response_20241115_143812.md
(+4 files in other folders)
